Fixed overflowing issues, added download button to previewer

--- a/src/app/show-resource/show-resource.component.css
+++ b/src/app/show-resource/show-resource.component.css
@@ -1,5 +1,5 @@
 iframe
 {
 	width: 100%;
-	height: 100%;
+	height: 85vh;
 }
