--- a/src/app/site/site.component.scss
+++ b/src/app/site/site.component.scss
@@ -10,3 +10,7 @@ mat-sidenav
 {
 	width: 100%;
 }
+.mat-drawer-container
+{
+	min-height: 100%;
+}
